--- a/package.json
+++ b/package.json
@@ -1,10 +1,30 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "escpos": "^3.0.0-alpha.6",
     "escpos-network": "^3.0.0-alpha.5",
     "escpos-usb": "^3.0.0-alpha.4",
     "express": "^5.1.0",
     "printer": "^0.4.0"
-  }
+  },
+  "name": "cardapioclick",
+  "version": "1.0.0",
+  "description": "",
+  "main": "print-server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ronny-D0308/CardapioClick.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ronny-D0308/CardapioClick/issues"
+  },
+  "homepage": "https://github.com/ronny-D0308/CardapioClick#readme"
 }
